--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                         <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                             <li>
                                                 <u><b>Koki Masui</b></u>，Masao Ogino，Takahiro Katagiri，Fumihiko Ino，”IC(𝒑) Preconditioning with Acceleration Factor for
-                                                High-Frequency Electromagnetic Field Analysis”，HPCAsia 2021，Online，January 2021.
+                                                High-Frequency Electromagnetic Field Analysis”，HPCAsia 2022，Online，January 2022.
                                             </li>
                                         </div>
                                     </td>
@@ -498,6 +498,15 @@
                                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                         <li>
                                                             <a href="http://xsig.hpcc.jp/2020/">xSIG 2020</a>ヤングプログラム委員
+                                                        </li>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td table width="900">
+                                                    <div style="margin-left: 1.4em; text-indent: -1.4em;">
+                                                        <li>
+                                                            <a href="https://atrg.jp/atmg/2021/">xSIG 2020Auto-Tuning for Multicore and GPU (ATMG)</a>Program Committee member
                                                         </li>
                                                     </div>
                                                 </td>
