--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                                                 <td table width="900">
                                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                         <li>
-                                                            <a href="http://xsig.hpcc.jp/2020/">xSIG 2020</a>ヤングプログラム委員
+                                                            <a href="http://xsig.hpcc.jp/2020/">xSIG 2020</a> ヤングプログラム委員
                                                         </li>
                                                     </div>
                                                 </td>
@@ -506,7 +506,7 @@
                                                 <td table width="900">
                                                     <div style="margin-left: 1.4em; text-indent: -1.4em;">
                                                         <li>
-                                                            <a href="https://atrg.jp/atmg/2021/">xSIG 2020Auto-Tuning for Multicore and GPU (ATMG)</a>Program Committee member
+                                                            <a href="https://atrg.jp/atmg/2021/">Auto-Tuning for Multicore and GPU (ATMG)</a> Program Committee member
                                                         </li>
                                                     </div>
                                                 </td>
